--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,466 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="ua"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/styles.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/images/favicon.png"
+    />
     <script src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top">
+        <div class="container header__right-content">
+          <div class="header__top-bar">
+            <a
+              href="#menu"
+              class="icon icon--menu top-bar__icon"
+            ></a>
+            <a
+              href="#"
+              class="header__logo logo"
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__bottom">
+        <div class="container header__left-content">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__button tickets">
+            <p class="tickets__title">КВИТКИ</p>
+            <div class="tickets__block">
+              <a
+                href="#events"
+                class="icon icon--arrow"
+              ></a>
+            </div>
+          </div>
+          <div class="header__tip tip">
+            <div class="tip__line"></div>
+            <p class="tip__text">ПОДІЇ</p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
+            <nav class="menu__nav nav">
+              <div class="nav__block">
+                <a
+                  href="#gallery"
+                  class="nav__link nav__link--white"
+                >
+                  Галерея
+                </a>
+                <a
+                  href="#events"
+                  class="nav__link nav__link--white"
+                >
+                  Виставки та події
+                </a>
+              </div>
+              <div class="nav__block">
+                <a
+                  href="#about-us"
+                  class="nav__link nav__link--white"
+                >
+                  Про нас
+                </a>
+                <a
+                  href="#contacts"
+                  class="nav__link nav__link--white"
+                >
+                  Контакти
+                </a>
+              </div>
+            </nav>
+          </div>
+          <div class="menu__divider"></div>
+          <div class="menu__bottom shedule">
+            <p class="shedule__title">Графік роботи</p>
+            <div class="shedule__content">
+              <ul class="shedule__list">
+                <li class="shedule__item">
+                  <p class="shedule__text shedule__text--rude">12:00 - 20:00</p>
+                  <p class="shedule__text">середа</p>
+                </li>
+                <li class="shedule__item">
+                  <p class="shedule__text shedule__text--rude">12:00 - 20:00</p>
+                  <p class="shedule__text">четвер</p>
+                </li>
+                <li class="shedule__item">
+                  <p class="shedule__text shedule__text--rude">12:00 - 20:00</p>
+                  <p class="shedule__text">п'ятниця</p>
+                </li>
+                <li class="shedule__item">
+                  <p class="shedule__text shedule__text--rude">11:00 - 19:00</p>
+                  <p class="shedule__text">субота</p>
+                </li>
+                <li class="shedule__item">
+                  <p class="shedule__text shedule__text--rude">11:00 - 19:00</p>
+                  <p class="shedule__text">неділя</p>
+                </li>
+              </ul>
+              <div class="shedule__off">
+                <p class="shedule__text shedule__text--rude">Вихідні:</p>
+                <p class="shedule__text">понеділок, вівторок</p>
+                <p class="shedule__text">
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section
+          class="section events"
+          id="events"
+        >
+          <div class="container">
+            <h2 class="section__title">Актуальні події</h2>
+            <div class="exhibition">
+              <img
+                class="exhibition__photo"
+                src="./images/events/first-event.png"
+                alt="Йду і повертаюсь"
+              />
+              <div class="exhibition__content">
+                <div class="exhibition__description">
+                  <p class="exhibition__type">ВИСТАВКА</p>
+                  <p class="exhibition__date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__name">
+                  <h3 class="exhibition__title">Йду і повертаюсь</h3>
+                  <div class="exhibition__point"></div>
+                </div>
+                <p class="exhibition__article">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+            <div class="exhibition">
+              <img
+                class="exhibition__photo"
+                src="./images/events/second-event.png"
+                alt="І спогади і мрії"
+              />
+              <div class="exhibition__content">
+                <div class="exhibition__description">
+                  <p class="exhibition__type">ВИСТАВКА</p>
+                  <p class="exhibition__date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__name">
+                  <h3 class="exhibition__title">І спогади і мрії</h3>
+                  <div class="exhibition__point"></div>
+                </div>
+                <p class="exhibition__article">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="lecture">
+            <img
+              class="lecture__photo"
+              src="./images/events/third-event.png"
+              alt="Від класицизму до романтизму"
+            />
+            <div class="lecture__content">
+              <div class="lecture__description">
+                <p class="lecture__type">ЛЕКЦІЯ</p>
+                <p class="lecture__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="lecture__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </section>
+        <section
+          class="section gallery"
+          id="gallery"
+        >
+          <div class="container">
+            <h2 class="section__title">Галерея</h2>
+            <div class="gallery__container">
+              <input
+                type="radio"
+                id="photo1"
+                name="gallery-radio"
+                checked
+              />
+              <input
+                type="radio"
+                id="photo2"
+                name="gallery-radio"
+              />
+              <input
+                type="radio"
+                id="photo3"
+                name="gallery-radio"
+              />
+              <input
+                type="radio"
+                id="photo4"
+                name="gallery-radio"
+              />
+              <div class="gallery__photos">
+                <picture class="picture picture--thin">
+                  <img
+                    class="gallery__photo gallery__photo--thin"
+                    src="./images/gallery/gallery-first.png"
+                    alt="gallery"
+                  />
+                </picture>
+
+                <picture class="picture picture--wide">
+                  <img
+                    class="gallery__photo gallery__photo--wide"
+                    src="./images/gallery/gallery-second.png"
+                    alt="gallery"
+                  />
+                </picture>
+
+                <picture class="picture picture--wide">
+                  <source
+                    srcset="./images/gallery/gallery-third-mb.png"
+                    media="(max-width: 1023px)"
+                  />
+                  <img
+                    class="gallery__photo gallery__photo--wide gallery__photo--small"
+                    src="./images/gallery/gallery-third.png"
+                    alt="gallery"
+                  />
+                </picture>
+
+                <picture class="picture picture--thin">
+                  <img
+                    class="gallery__photo gallery__photo--thin gallery__photo--small"
+                    src="./images/gallery/gallery-fourth.png"
+                    alt="gallery"
+                  />
+                </picture>
+              </div>
+              <div class="gallery__scroll scroll">
+                <label
+                  for="photo1"
+                  class="scroll__point"
+                ></label>
+                <label
+                  for="photo2"
+                  class="scroll__point"
+                ></label>
+                <label
+                  for="photo3"
+                  class="scroll__point"
+                ></label>
+                <label
+                  for="photo4"
+                  class="scroll__point"
+                ></label>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section
+          class="section about-us"
+          id="about-us"
+        >
+          <div class="about-us__background"></div>
+          <div class="container">
+            <div class="about-us__content">
+              <h2 class="section__title section__title--white">Підписка</h2>
+              <p class="about-us__subtitle">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <div class="about-us__subscription">
+                <form
+                  class="about-us__email form"
+                  action="."
+                  method="GET"
+                >
+                  <input
+                    class="form__email"
+                    required
+                    type="email"
+                    placeholder="E-mail"
+                  />
+                  <button
+                    type="submit"
+                    class="form__button"
+                  ></button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__main">
+            <div class="footer__top social-bar">
+              <a
+                href="#"
+                class="social-bar__logo logo"
+              ></a>
+              <div class="social-bar__icons">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="icon icon--facebook"
+                ></a>
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="icon icon--instagram"
+                ></a>
+              </div>
+            </div>
+            <div class="footer__info">
+              <div class="footer__description shedule shedule--black-text">
+                <p class="shedule__title">Графік роботи</p>
+                <ul class="shedule__list">
+                  <li class="shedule__item shedule__item--block">
+                    <p class="shedule__text shedule__text--rude">
+                      12:00 - 20:00
+                    </p>
+                    <p class="shedule__text">середа</p>
+                  </li>
+                  <li class="shedule__item shedule__item--block">
+                    <p class="shedule__text shedule__text--rude">
+                      12:00 - 20:00
+                    </p>
+                    <p class="shedule__text">четвер</p>
+                  </li>
+                  <li class="shedule__item shedule__item--block">
+                    <p class="shedule__text shedule__text--rude">
+                      12:00 - 20:00
+                    </p>
+                    <p class="shedule__text">п'ятниця</p>
+                  </li>
+                  <li class="shedule__item shedule__item--block">
+                    <p class="shedule__text shedule__text--rude">
+                      11:00 - 19:00
+                    </p>
+                    <p class="shedule__text">субота</p>
+                  </li>
+                  <li class="shedule__item shedule__item--block">
+                    <p class="shedule__text shedule__text--rude">
+                      11:00 - 19:00
+                    </p>
+                    <p class="shedule__text">неділя</p>
+                  </li>
+                </ul>
+                <div class="shedule__off">
+                  <p class="shedule__text">
+                    Вихідні понеділок, вівторок
+                    <br />
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </p>
+                </div>
+              </div>
+              <div class="footer__description contacts">
+                <p class="contacts__title">Контакти:</p>
+                <ul class="contacts__list">
+                  <li class="contacts__item">
+                    <p class="contacts__text">
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </p>
+                  </li>
+                  <li class="contacts__item">
+                    <p class="contacts__text">тел. +38 (044) 278-13-57</p>
+                  </li>
+                  <li class="contacts__item">
+                    <p class="contacts__text">факс +38 (044) 278-74-54</p>
+                  </li>
+                  <li class="contacts__item">
+                    <p class="contacts__text">e-mail: info@namu.kiev.ua</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer__button">
+                <a
+                  href="#"
+                  class="icon icon--arrow-up"
+                ></a>
+              </div>
+              <div class="footer__divider"></div>
+              <nav class="footer__nav nav">
+                <div class="nav__block nav__block--footer">
+                  <a
+                    href="#gallery"
+                    class="nav__link nav__link--black"
+                  >
+                    Галерея
+                  </a>
+                  <a
+                    href="#events"
+                    class="nav__link nav__link--black"
+                  >
+                    Виставки та події
+                  </a>
+                </div>
+                <div class="nav__block nav__block--footer">
+                  <a
+                    href="#about-us"
+                    class="nav__link nav__link--black"
+                  >
+                    Про нас
+                  </a>
+                  <a
+                    href="#contacts"
+                    class="nav__link nav__link--black"
+                  >
+                    Контакти
+                  </a>
+                </div>
+              </nav>
+            </div>
+          </div>
+          <div class="footer__designer designer">
+            <p class="designer__text">Designed by Zhyriada Marina</p>
+            <p class="designer__text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
