--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,14 @@
           </a>
         </div>
       </div>
+      <span class="left-position">
+        <span class="left-position--line"></span>
+        <span class="left-position--text">події</span>
+      </span>
     </header>
 
     <aside class="menu" id="menu">
-      <a class="icon menu__icon" href="#">
-        <img class="icon icon__img" src="images/burger-close.svg"
-          alt="burger close">
-      </a>
+      <a class="icon icon--close" href="#"></a>
       <div class="menu__container">
         <div class="nav menu__nav">
           <ul class="nav__list">
@@ -67,7 +68,7 @@
 
         <div class="schedule menu__schedule">
           <h3 class="schedule__title menu__schedule--color">Графік роботи</h3>
-          <div class="schedule__description">
+          <div class="schedule__description menu__description">
             <div class="schedule__days">
               <ul class="schedule__info">
                 <li class="schedule__day menu__schedule--color"><strong>12:00 - 20:00</strong> середа</li>
@@ -80,7 +81,7 @@
             <div class="schedule__weekends">
               <p class="schedule__text menu__schedule--color">
                 <strong>Вихідні:</strong> понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину до закриття музею
+                Каса припиняє роботу <br> за 1 годину до закриття музею
               </p>
             </div>
           </div>
@@ -169,7 +170,26 @@
     <div class="gallery" id="gallery">
       <div class="gallery__wrapper">
         <h2 class="gallery__title">Галерея</h2>
-        <div class="gallery__picture"></div>
+        <div class="slides">
+          <div class="slides__fade">
+            <div class="slides__image slides__image--woman-heigt">
+              <img src="images/gallery/women.png" alt="picture of woman"
+                class="slides__img">
+            </div>
+            <div class="slides__image slides__image--winter-big">
+              <img src="images/gallery/winter.png" alt="picture of winter"
+                class="slides__img">
+            </div>
+            <div class="slides__image slides__image--park-long">
+              <img src="images/gallery/park.png" alt="picture of park"
+                class="slides__img">
+            </div>
+            <div class="slides__image slides__image--sea-aquare">
+              <img src="images/gallery/sea.png" alt="picture of sea"
+                class="slides__img">
+            </div>
+          </div>
+        </div>
         <div class="gallery__circles">
           <span class="gallery__dot" onclick="currentSlide(1)"></span>
           <span class="gallery__dot" onclick="currentSlide(2)"></span>
@@ -197,91 +217,89 @@
     </div>
 
     <div class="contacts" id="contacts">
-      <div class="contacts__top">
-        <a href="#" class="contacts__logo">
-          <img src="images/logo.png" alt="namu logo"
-            class="contacts__logo contacts__logo--img">
-        </a>
-        <div class="contacts__socials">
-          <a href="#https://www.facebook.com/namu.museum/?locale=uk_UA"
-            class="contacts__icon" target="_blank">
-            <img src="images/facebook.svg" alt="facebook logo link">
+      <div class="contacts__container">
+        <div class="contacts__top">
+          <a href="#" class="contacts__logo">
+            <img src="images/logo.png" alt="namu logo"
+              class="contacts__logo contacts__logo--img">
           </a>
-          <a href="#https://www.instagram.com/namu.museum/"
-            class="contacts__icon" target="_blank">
-            <img src="images/instagram.svg" alt="instagram logo link">
-          </a>
-        </div>
-      </div>
-
-      <div class="contacts__content">
-        <div class="contacts__wrapper">
-          <div class="schedule contacts__schedule">
-            <h3 class="schedule__title contacts__schedule--color">Графік роботи</h3>
-            <div class="schedule__description">
-              <ul class="schedule__info">
-                <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> середа</li>
-                <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> четвер</li>
-                <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> пʼятниця</li>
-                <li class="schedule__day contacts__schedule--color"><strong>11:00 - 19:00</strong> субота</li>
-                <li class="schedule__day contacts__schedule--color"><strong>11:00 - 19:00</strong> неділя</li>
-              </ul>
-              <p class="schedule__text contacts__schedule--color">
-                <strong>Вихідні:</strong> понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину до закриття музею
-              </p>
-            </div>
-          </div>
-          <div class="contacts__contact">
-            <h3 class="contacts__title">Контакти:</h3>
-            <div class="contacts__info">
-              <p>
-                <a class="contacts__link" href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4493441,30.5284204,17z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu">
-                  вул. М. Грушевського, 6; Київ, 01001
-                </a>
-              </p>
-              <p>
-                <a class="contacts__link" href="tel:+38 (044) 278-13-57">
-                  тел. +38 (044) 278-13-57
-                </a>
-              </p>
-              <p>
-                <a class="contacts__link" href="tel:+38 (044) 278-13-57">
-                  факс +38 (044) 278-74-54
-                </a>
-              </p>
-              <p>
-                <a class="contacts__link" href="mailto: info@namu.kiev.ua">
-                  e-mail: info@namu.kiev.ua
-                </a>
-              </p>
-            </div>
+          <div class="contacts__socials">
+            <a href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+              class="contacts__icon" target="_blank">
+              <img src="images/facebook.svg" alt="facebook logo link">
+            </a>
+            <a href="https://www.instagram.com/namu.museum/"
+              class="contacts__icon" target="_blank">
+              <img src="images/instagram.svg" alt="instagram logo link">
+            </a>
           </div>
         </div>
-
-        <div class="contacts__arrows">
-          <a href="#" class="contacts__arrow">
-            <p>&#8593;</p>
-          </a>
-        </div>
-
-        <hr class="contacts__divider">
-
-        <div class="nav contacts__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link contacts__nav--color" href="#gallery">Галерея</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link contacts__nav--color" href="#">Про Нас</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link contacts__nav--color" href="#current-events">Виставки та<br>події</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link contacts__nav--color" href="#contacts">Контакти</a>
-            </li>
-          </ul>
+        <div class="contacts__content">
+          <div class="contacts__wrapper">
+            <div class="schedule contacts__schedule">
+              <h3 class="schedule__title contacts__schedule--color">Графік роботи</h3>
+              <div class="schedule__description">
+                <ul class="schedule__info">
+                  <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> середа</li>
+                  <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> четвер</li>
+                  <li class="schedule__day contacts__schedule--color"><strong>12:00 - 20:00</strong> пʼятниця</li>
+                  <li class="schedule__day contacts__schedule--color"><strong>11:00 - 19:00</strong> субота</li>
+                  <li class="schedule__day contacts__schedule--color"><strong>11:00 - 19:00</strong> неділя</li>
+                </ul>
+                <p class="schedule__text contacts__schedule--color">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                  Каса припиняє роботу <br> за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+            <div class="contacts__contact">
+              <h3 class="contacts__title">Контакти:</h3>
+              <div class="contacts__info">
+                <p>
+                  <a class="contacts__link" href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4493441,30.5284204,17z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu">
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </p>
+                <p>
+                  <a class="contacts__link" href="tel:+38 (044) 278-13-57">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </p>
+                <p>
+                  <a class="contacts__link" href="tel:+38 (044) 278-13-57">
+                    факс +38 (044) 278-74-54
+                  </a>
+                </p>
+                <p>
+                  <a class="contacts__link" href="mailto: info@namu.kiev.ua">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="contacts__arrows">
+            <a href="#" class="contacts__arrow">
+              <p>&#8593;</p>
+            </a>
+          </div>
+          <hr class="contacts__divider">
+          <div class="nav contacts__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link contacts__nav--color" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link contacts__nav--color" href="#">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link contacts__nav--color" href="#current-events">Виставки та<br>події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link contacts__nav--color" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
