add final solution

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
         </div>
       </div>
       <span class="left-position">
-        <span class="left-position--line"></span>
-        <span class="left-position--text">події</span>
+        <div class="left-position--line"></div>
+        <div class="left-position--text">події</div>
       </span>
     </header>
 
@@ -173,7 +173,7 @@
         <div class="slides">
           <div class="slides__fade">
             <div class="slides__image slides__image--woman-heigt">
-              <img src="images/gallery/women.png" alt="picture of woman"
+              <img src="images/gallery/women-mobile.png" alt="picture of woman"
                 class="slides__img">
             </div>
             <div class="slides__image slides__image--winter-big">
