--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
         ></a>
       </aside>
     </header>
-    <main>
+    <main class="page">
       <section
         id="museum"
         class="museum"
@@ -377,7 +377,7 @@
           <div class="gallery__grid-row">
             <a
               href="#"
-              class="link link--scale-hover"
+              class="link link--scale-hover-sm"
             >
               <img
                 class="gallery__item"
@@ -387,7 +387,7 @@
             </a>
             <a
               href="#"
-              class="link link--scale-hover"
+              class="link link--scale-hover-sm"
             >
               <img
                 class="gallery__item"
@@ -399,7 +399,7 @@
           <div class="gallery__grid-row">
             <a
               href="#"
-              class="link link--scale-hover"
+              class="link link--scale-hover-sm"
             >
               <img
                 class="gallery__item"
@@ -409,7 +409,7 @@
             </a>
             <a
               href="#"
-              class="link link--scale-hover"
+              class="link link--scale-hover-sm"
             >
               <img
                 class="gallery__item"
@@ -461,7 +461,8 @@
             </a>
             <div class="footer__links-socials">
               <a
-                href="#"
+                href="https://www.facebook.com/"
+                target="_blank"
                 class="link link--scale-hover"
               >
                 <img
@@ -470,7 +471,8 @@
                 />
               </a>
               <a
-                href="#"
+                href="https://www.instagram.com/"
+                target="_blank"
                 class="link link--scale-hover"
               >
                 <img
