fix email-form submit

--- a/src/index.html
+++ b/src/index.html
@@ -429,7 +429,10 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
         <div class="contact-us__form-wrapper">
-          <form class="email-form">
+          <form
+            onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
+            class="email-form"
+          >
             <input
               type="email"
               class="email-form__input main-text"
