--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,336 @@
 <!doctype html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+
+    <link
+      rel="icon"
+      href="./images/icons/header-logo.svg"
+      type="image/svg+xml"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="home">
+      <div class="header__wrapper">
+        <div class="header__main">
+          <div class="header__img-container">
+            <a class="header__burger-menu" href="#menu"></a>
+            <a class="header__logo" href="#home"></a>
+          </div>
+          <div class="art-museum">
+            <h1 class="art-museum__title">
+              ХУДОЖНІЙ <br>
+              МУЗЕЙ
+            </h1>
+            <div class="art-museum__ticket">
+              <span class="art-museum__ticket-text">КВИТКИ</span>
+              <button class="art-museum__ticket-button"></button>
+            </div>
+            <div class="art-museum__section">
+              <p class="art-museum__section-title">ПОДІЇ</p>
+              <hr class="art-museum__section-divider">
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu__container">
+
+          <div class="menu__panel">
+            <a class="menu__icon menu__icon--close" href="#home"></a>
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <div class="nav__group nav__group--length menu__nav-group">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#gallery">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#events">Виставки та події</a>
+                  </li>
+                </div>
+                <div class="nav__group nav__group--length menu__nav-group">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#subscribe">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#footer">Контакти</a>
+                  </li>
+                </div>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="schedule menu__schedule">
+            <div class="schedule__container">
+              <h4 class="schedule__title">Графік роботи</h4>
+              <ul class="schedule__list">
+                <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">середа</span></li>
+                <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">четвер</span></li>
+                <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">п’ятниця</span></li>
+                <li class="schedule__item">11:00 — 19:00 <span class="schedule__item-day">субота</span></li>
+                <li class="schedule__item">11:00 — 19:00 <span class="schedule__item-day">неділя</span></li>
+              </ul>
+            </div>
+            <p class="schedule__annotation">
+              <span class="schedule__annotation-remark menu__schedule-annotation-remark">Вихідні</span>
+              понеділок, вівторок<br> Kaca припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </aside>
+
+    <section class="events" id="events">
+      <div class="events__wrapper">
+        <h2 class="events__title">Актуальні події</h2>
+
+        <div class="events__catalog">
+          <div class="event">
+            <img
+              class="event__img"
+              src="../src/images/event-img1.png"
+              alt="scenary image"
+            >
+            <div class="event__content">
+              <div class="event__meta">
+                <span class="event__type">ВИСТАВКА</span>
+                <span class="event__date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="event__title">
+                Йду і повертаюсь
+                <a class="event__point"></a>
+              </h3>
+              <p class="event__desc">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="event">
+            <img
+              class="event__img"
+              src="../src/images/event-img2.png"
+              alt="picture image"
+            >
+            <div class="event__content">
+              <div class="event__meta">
+                <span class="event__type">ВИСТАВКА</span>
+                <span class="event__date">26.08-29.11.2019</span>
+              </div>
+
+              <h3 class="event__title">
+                І спогади і мрії
+                <a class="event__point"></a>
+              </h3>
+              <p class="event__desc">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="art-periods" id="art-periods">
+      <div class="art-periods__wrapper"></div>
+      <div class="art-periods__item">
+        <div class="art-periods__meta">
+          <span class="art-periods__type">ЛЕКЦІЯ</span>
+          <span class="art-periods__date">26/08/2019 - 11:00</span>
+        </div>
+        <h3 class="art-periods__title">
+          Від класицизму до <br>
+          романтизму
+        </h3>
+      </div>
+    </section>
+
+    <section class="gallery" id="gallery">
+      <div class="gallery__wrapper">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__slider-container">
+          <div class="gallery__slider">
+            <img
+            class="gallery__slider-img"
+            src="../src/images/gallery-img1.png"
+            alt="slider image1"
+            id="slider1"
+            >
+            <img
+              class="gallery__slider-img"
+              src="../src/images/gallery-img2.png"
+              alt="slider image2"
+              id="slider2"
+            >
+            <img
+              class="gallery__slider-img"
+              src="../src/images/gallery-img3.png"
+              alt="slider image3"
+              id="slider3"
+            >
+            <img
+              class="gallery__slider-img"
+              src="../src/images/gallery-img4.png"
+              alt="slider image4"
+              id="slider4"
+            >
+          </div>
+
+          <div class="gallery__dots">
+            <a
+              class="gallery__dot"
+              href="#slider1"
+              id="dot1"
+            >
+            </a>
+            <a
+              class="gallery__dot"
+              href="#slider2"
+              id="dot2"
+            >
+            </a>
+            <a
+              class="gallery__dot"
+              href="#slider3"
+              id="dot3"
+            >
+            </a>
+            <a
+              class="gallery__dot"
+              href="#slider4"
+              id="dot4"
+            >
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe" id="subscribe">
+      <div class="subscribe__overlay">
+        <div class="subscribe__wrapper">
+
+          <div class="subscribe__content">
+            <h2 class="subscribe__title">Підписка</h2>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+
+          <form class="subscribe__form">
+            <input
+              name="email"
+              type="email"
+              class="subscribe__email"
+              placeholder="E-mail"
+              required
+            />
+            <button class="subscribe__button" type="submit">
+              <a class="subscribe__arrow" href="home"></a>
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="footer">
+      <div class="footer__wrapper">
+
+        <div class="footer__social-media">
+          <a class="footer__logo" href="#home"></a>
+
+
+          <div class="footer__messengers">
+            <a class="footer__messengers-icon footer__messengers-icon--facebook"
+              href="https://www.facebook.com/"
+              target="_blank">
+            </a>
+            <a class="footer__messengers-icon footer__messengers-icon--instagram"
+              href="https://www.instagram.com/?hl=en"
+              target="_blank">
+            </a>
+          </div>
+        </div>
+
+
+        <div class="schedule">
+          <div class="schedule__container">
+            <h4 class="schedule__title">Графік роботи</h4>
+            <ul class="schedule__list">
+              <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">середа</span></li>
+              <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">четвер</span></li>
+              <li class="schedule__item">12:00 — 20:00 <span class="schedule__item-day">п’ятниця</span></li>
+              <li class="schedule__item">11:00 — 19:00 <span class="schedule__item-day">субота</span></li>
+              <li class="schedule__item">11:00 — 19:00 <span class="schedule__item-day">неділя</span></li>
+            </ul>
+          </div>
+          <p class="schedule__annotation">
+            <span class="schedule__annotation-remark">Вихідні</span>
+            понеділок, вівторок Kaca припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+
+        <div class="contacts">
+          <p class="contacts__title">Контакти</p>
+          <address class="contacts__address">
+            <a
+              class="contacts__info-address"
+              href="https://www.google.com/maps?q=Київ+вул.+М.+Грушевського,+6"
+              target="_blank"
+            >вул. М. Грушевського, 6; Київ, 01001
+            </a> <br>
+            тел. <a class="contacts__phone" href="tel:+38 (044) 278-13-57">+38 (044) <br class="contacts__phone-number"> 278-13-57</a> <br>
+            факс <a class="contacts__fax" href="fax:+38 (044) 278-74-54">+38 (044) 278-74-54</a> <br>
+            e-mail: <a class="contacts__email" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+          </address>
+        </div>
+
+        <div class="button__scroll">
+          <a class="button__scroll-arrow" href="#home"></a>
+        </div>
+
+        <nav class="nav footer__nav">
+          <ul class="nav__list">
+            <div class="nav__group nav__group--length">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#events">Виставки та події</a>
+              </li>
+            </div>
+            <div class="nav__group nav__group--length">
+              <li class="nav__item">
+                <a class="nav__link" href="#subscribe">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#footer">Контакти</a>
+              </li>
+            </div>
+          </ul>
+        </nav>
+
+        <div class="footer__credits">
+          <p class="footer__designed">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+      </div>
+    </footer>
   </body>
 </html>
