--- a/src/index.html
+++ b/src/index.html
@@ -294,9 +294,9 @@
               target="_blank"
             >вул. М. Грушевського, 6; Київ, 01001
             </a> <br>
-            тел. <a class="contacts__phone" href="tel:+38 (044) 278-13-57">+38 (044) <br class="contacts__phone-number"> 278-13-57</a> <br>
-            факс <a class="contacts__fax" href="fax:+38 (044) 278-74-54">+38 (044) 278-74-54</a> <br>
-            e-mail: <a class="contacts__email" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+            <a class="contacts__phone" href="tel:+38 (044) 278-13-57">тел. +38 (044) <br class="contacts__phone-number"> 278-13-57</a> <br>
+            <a class="contacts__fax" href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a> <br>
+            <a class="contacts__email" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
           </address>
         </div>
 
