made contacts as links

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
       rel="stylesheet"
       href="./styles/style.scss"
     />
-    <script src="./scripts/main.js" defer></script>
+    <script
+      src="./scripts/main.js"
+      defer
+    ></script>
   </head>
   <body class="page__body">
     <!--#region header  -->
@@ -263,7 +266,10 @@
           </div>
         </div>
       </section>
-      <section class="subscription" id="subscription">
+      <section
+        class="subscription"
+        id="subscription"
+      >
         <div class="subscription__content">
           <h2 class="section-title section-title--white">Підписка</h2>
           <h3 class="subscription__subtitle">
@@ -426,12 +432,31 @@
             >
               <h2 class="contacts__title">Контакти:</h2>
               <div class="contacts__data">
-                <span class="contacts__address">
+                <a
+                  class="contacts__link"
+                  href="https://g.co/kgs/F5huQ3e"
+                  target="_blank"
+                >
                   вул. М. Грушевського, 6; Київ, 01001
-                </span>
-                <span class="contacts__phone">тел. +38 (044) 278-13-57</span>
-                <span class="contacts__fax">факс +38 (044) 278-74-54</span>
-                <span class="contacts__email">e-mail: info@namu.kiev.ua</span>
+                </a>
+                <a
+                  class="contacts__link"
+                  href="tel: +38 (044) 278-13-57"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  class="contacts__link"
+                  href="tel: +38 (044) 278-13-57"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  class="contacts__link"
+                  href="mailto:info@namu.kiev.ua"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
               </div>
             </div>
             <a
