--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,8 @@
         aria-hidden="true"
       >
         <div class="header__menu-wrapper">
-          <a
-            href="#"
-            class="header__menu-icon-close"
+          <a href="#!"
+          class="header__menu-icon-close"
             aria-label="Close menu"
           >
             <img
@@ -135,7 +134,7 @@
           </nav>
         </div>
 
-        <hr class="header__menu-separator" />
+
 
         <div class="header__menu-hours">
           <div class="header__menu-hours-schedule">
