--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,455 @@
+<!--#region head-->
 <!doctype html>
-<html lang="en">
+<html
+  lang="eng"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/logo&icons/NAMU.svg"
+    />
+
+    <title>Музей NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!--#endregion head-->
+  <body class="page__body">
+    <header class="header">
+      <div class="header__bg bg">
+        <a
+          href="#"
+          class="bg__logo-link"
+        >
+          <img
+            class="bg__logo"
+            src="images/logo&icons/NAMU.svg"
+            alt="NAMU.logo"
+          />
+        </a>
+      </div>
+      <div class="header__content">
+        <a
+          href="#menu"
+          class="header__burger-menu"
+        ></a>
+        <div class="header__art-museum art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="art-museum__content">
+            <a
+              href="#actuals"
+              class="art-museum__button"
+            ></a>
+            <form
+              class="header__form form"
+              action="#"
+              method="post"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="text"
+                name="tickets"
+                class="form__input"
+                placeholder="КВИТКИ"
+                required
+              />
+              <button
+                type="submit"
+                class="form__button"
+              >
+                <img
+                  src="images/logo&icons/arrow-button.svg"
+                  alt="arrow"
+                  class="form__button--img"
+                />
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="menu__top">
+          <a
+            href="#"
+            class="menu__icon"
+          ></a>
+          <div class="menu__nav nav">
+            <div class="nav__sections">
+              <div class="nav__section">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+                <a
+                  href="#actuals"
+                  class="nav__link"
+                >
+                  Виставки та
+                  <br />
+                  події
+                </a>
+              </div>
+              <div class="nav__section">
+                <a
+                  href="#submit"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__bottom">
+          <div class="menu__schedule schedule">
+            <h3 class="schedule__title">Графік роботи</h3>
+            <div class="schedule__list">
+              <li class="schedule__item">
+                <strong>12:00 — 20:00</strong>
+                середа
+              </li>
+              <li class="schedule__item">
+                <strong>12:00 — 20:00</strong>
+                четвер
+              </li>
+              <li class="schedule__item">
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+              </li>
+              <li class="schedule__item">
+                <strong>11:00 — 19:00</strong>
+                субота
+              </li>
+              <li class="schedule__item">
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </li>
+            </div>
+          </div>
+          <p class="menu__description">
+            <strong>Вихідні:</strong>
+            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+            музею
+          </p>
+        </div>
+      </div>
+    </aside>
+    <main class="main">
+      <section
+        class="section section-actuals"
+        id="actuals"
+      >
+        <h2 class="section__title">Актуальні події</h2>
+        <div class="section-actuals__action action">
+          <img
+            class="action__image"
+            src="images/actuals/go&comeback.png"
+            alt="go&comeback"
+          />
+          <div class="action__content">
+            <div class="action__info info">
+              <p class="info__act">ВИСТАВКА</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <div class="action__name">
+              <h3 class="action__title">Йду і повертаюсь</h3>
+              <div class="action__red-square"></div>
+            </div>
+            <p class="action__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+        <div class="section-actuals__action action">
+          <img
+            class="action__image"
+            src="images/actuals/dreams.png"
+            alt="go&comeback"
+          />
+          <div class="action__content">
+            <div class="action__info info">
+              <p class="info__act">ВИСТАВКА</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <div class="action__name">
+              <h3 class="action__title">І спогади і мрії</h3>
+              <div class="action__red-square"></div>
+            </div>
+            <p class="action__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="from-to">
+        <img
+          class="from-to__img"
+          src="images/actuals/from-to.png"
+          alt="from-to"
+        />
+        <div class="from-to__content">
+          <div class="from-to__inform">
+            <p class="from-to__act">ЛЕКЦІЯ</p>
+            <p class="from-to__date">26/08/2019 - 11:00</p>
+          </div>
+          <h2 class="from-to__title">Від класицизму до романтизму</h2>
+        </div>
+      </section>
+      <section
+        class="section section-gallery"
+        id="gallery"
+      >
+        <h2 class="section__title">Галерея</h2>
+        <div class="section-gallery__slider slider">
+          <div class="slider__content"></div>
+          <div class="slider__stick stick">
+            <div class="stick__element stick__element--gray"></div>
+            <div class="stick__element"></div>
+            <div class="stick__element"></div>
+            <div class="stick__element"></div>
+          </div>
+        </div>
+      </section>
+      <section
+        class="section-submit"
+        id="submit"
+      >
+        <h2 class="section__title section__title--white">Підписка</h2>
+        <p class="section-submit__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form
+          class="section-submit__form form-2"
+          action="#"
+          method="post"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            class="form-2__input"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            required
+          />
+          <button
+            class="form-2__button"
+            type="submit"
+          >
+            <img
+              class="form-2__button--img"
+              src="images/logo&icons/black-arrow-button.svg"
+              alt="arrow"
+            />
+          </button>
+        </form>
+      </section>
+    </main>
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="footer__socials-content">
+        <div class="footer__logo-socials">
+          <a
+            href="#"
+            class="footer__logo-link"
+          >
+            <img
+              class="footer__logo"
+              src="images/logo&icons/NAMU.svg"
+              alt="NAMU.logo"
+            />
+          </a>
+          <div class="footer__socials socials">
+            <a
+              href="https://www.facebook.com/namu.museum"
+              class="socials__link"
+              target="_blank"
+            >
+              <img
+                class="socials__image"
+                src="images/logo&icons/facebook.svg"
+                alt="facebook"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="socials__link"
+              target="_blank"
+            >
+              <img
+                class="socials__image"
+                src="images/logo&icons/instagram.svg"
+                alt="instagram"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="footer__content">
+          <div class="footer__top">
+            <div class="footer__schedule">
+              <div class="schedule2">
+                <h3 class="schedule2__title">Графік роботи</h3>
+                <ul class="schedule2__list">
+                  <li class="schedule2__item">
+                    <strong>12:00 — 20:00</strong>
+                    середа
+                  </li>
+                  <li class="schedule2__item">
+                    <strong>12:00 — 20:00</strong>
+                    четвер
+                  </li>
+                  <li class="schedule2__item">
+                    <strong>12:00 — 20:00</strong>
+                    п’ятниця
+                  </li>
+                  <li class="schedule2__item">
+                    <strong>11:00 — 19:00</strong>
+                    субота
+                  </li>
+                  <li class="schedule2__item">
+                    <strong>11:00 — 19:00</strong>
+                    неділя
+                  </li>
+                </ul>
+              </div>
+              <p class="schedule2__description">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+            <div class="footer__contacts contacts">
+              <h3 class="contacts__title">Контакти:</h3>
+              <ul class="contacts__list">
+                <li class="contscts__item">
+                  <a
+                    href="https://www.google.pl/maps/place/vulytsya+Mykhaila+%D0%9Drushevs'kogo,+6,+Kyiv,+Ukraina,+02000/@50.449395,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=pl&entry=ttu&g_ep=EgoyMDI1MDQyMS4wIKXMDSoASAFQAw%3D%3D"
+                    class="contacts__link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+                <li class="contscts__item">
+                  <a
+                    href="tel: +38 (044) 278-13-57"
+                    class="contacts__link"
+                  >
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+                <li class="contscts__item">
+                  <a
+                    href="tel: +38 (044) 278-74-54"
+                    class="contacts__link"
+                  >
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+                <li class="contscts__item">
+                  <a
+                    href="mailto: info@namu.kiev.ua"
+                    class="contacts__link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <a
+              href="#"
+              class="footer__go-to-top"
+            >
+              <img
+                class="footer__go-to-top--image"
+                src="images/logo&icons/arrow-up.svg"
+                alt="arrow"
+              />
+            </a>
+          </div>
+          <div class="footer__bottom bottom">
+            <div class="bottom__sections">
+              <div class="bottom__section">
+                <a
+                  href="#gallery"
+                  class="bottom__link"
+                >
+                  Галерея
+                </a>
+                <a
+                  href="#actuals"
+                  class="bottom__link"
+                >
+                  Виставки та події
+                </a>
+              </div>
+              <div class="bottom__section">
+                <a
+                  href="#submit"
+                  class="bottom__link"
+                >
+                  Про Нас
+                </a>
+                <a
+                  href="#contacts"
+                  class="bottom__link"
+                >
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__rights">
+        <p class="footer__autors">Designed by Zhyriada Marina</p>
+        <p class="footer__autors">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
