--- a/src/index.html
+++ b/src/index.html
@@ -98,78 +98,80 @@
       class="page__menu menu"
       id="menu"
     >
-      <div class="menu__content">
-        <div class="menu__top">
-          <a
-            href="#"
-            class="menu__icon"
-          ></a>
-          <div class="menu__nav nav">
-            <div class="nav__sections">
-              <div class="nav__section">
-                <a
-                  href="#gallery"
-                  class="nav__link"
-                >
-                  Галерея
-                </a>
-                <a
-                  href="#actuals"
-                  class="nav__link"
-                >
-                  Виставки та
-                  <br />
-                  події
-                </a>
-              </div>
-              <div class="nav__section">
-                <a
-                  href="#submit"
-                  class="nav__link"
-                >
-                  Про Нас
-                </a>
-                <a
-                  href="#contacts"
-                  class="nav__link"
-                >
-                  Контакти
-                </a>
+      <div class="menu__green">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="menu__icon"
+            ></a>
+            <div class="menu__nav nav">
+              <div class="nav__sections">
+                <div class="nav__section">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                  <a
+                    href="#actuals"
+                    class="nav__link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </div>
+                <div class="nav__section">
+                  <a
+                    href="#submit"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="menu__bottom">
-          <div class="menu__schedule schedule">
-            <h3 class="schedule__title">Графік роботи</h3>
-            <div class="schedule__list">
-              <li class="schedule__item">
-                <strong>12:00 — 20:00</strong>
-                середа
-              </li>
-              <li class="schedule__item">
-                <strong>12:00 — 20:00</strong>
-                четвер
-              </li>
-              <li class="schedule__item">
-                <strong>12:00 — 20:00</strong>
-                п’ятниця
-              </li>
-              <li class="schedule__item">
-                <strong>11:00 — 19:00</strong>
-                субота
-              </li>
-              <li class="schedule__item">
-                <strong>11:00 — 19:00</strong>
-                неділя
-              </li>
+          <div class="menu__bottom">
+            <div class="menu__schedule schedule">
+              <h3 class="schedule__title">Графік роботи</h3>
+              <div class="schedule__list">
+                <li class="schedule__item">
+                  <strong>12:00 — 20:00</strong>
+                  середа
+                </li>
+                <li class="schedule__item">
+                  <strong>12:00 — 20:00</strong>
+                  четвер
+                </li>
+                <li class="schedule__item">
+                  <strong>12:00 — 20:00</strong>
+                  п’ятниця
+                </li>
+                <li class="schedule__item">
+                  <strong>11:00 — 19:00</strong>
+                  субота
+                </li>
+                <li class="schedule__item">
+                  <strong>11:00 — 19:00</strong>
+                  неділя
+                </li>
+              </div>
             </div>
+            <p class="menu__description">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </p>
           </div>
-          <p class="menu__description">
-            <strong>Вихідні:</strong>
-            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
-            музею
-          </p>
         </div>
       </div>
     </aside>
@@ -225,11 +227,7 @@
         </div>
       </section>
       <section class="from-to">
-        <img
-          class="from-to__img"
-          src="images/actuals/from-to.png"
-          alt="from-to"
-        />
+        <div class="from-to__image"></div>
         <div class="from-to__content">
           <div class="from-to__inform">
             <p class="from-to__act">ЛЕКЦІЯ</p>
